--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 h1 {
-    color: red;
+    color: rgb(0, 217, 255);
+}
+
+body {
+    background-color: #fbfd93;
+}
+
+.header {
+    background-color: #a5fd93;
+    width: 100%;
+    height: 20%;
+    text-align: center;
+}
+
+.menuRef {
+    color: #1d201c;
+    font-family: fantasy;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.liStyle {
+    list-style-type: none;
+    display: inline-block;
+}
+
+.Footer {
+    background-color:  #a5fd93;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+}
+.textForTraining{
+    color: #000000;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #eaeaea;
 }
